fix(arc-663): Prevent filters from overflowing outside of container

--- a/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
+++ b/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
@@ -26,6 +26,9 @@
 }
 
 .c-filter-form__body {
+	max-height: 100%;
+	overflow: auto;
+
 	@include respond-to(md) {
 		flex-grow: 1;
 	}
